--- a/src/style.css
+++ b/src/style.css
@@ -1,14 +1,16 @@
 body {
-  background-image: url(sunset.jpeg);
-  position: relative;
+  background-image: linear-gradient(to top, #ad899d 0%, #ad899d 100%);
 }
 
-.container {
+.weather-app {
+  max-width: 600px;
   box-sizing: border-box;
   border-radius: 20px;
-  margin-top: 50px;
-  padding: 50px;
+  padding: 20px;
+  margin: 30px auto;
   border: solid 1px black;
+  background-image: url(sunset.jpeg);
+  position: relative;
 }
 
 .tomorrow,
@@ -27,7 +29,7 @@ body {
 .third:hover,
 .fourth:hover,
 .fifth:hover {
-  background-color: #5c636a;
+  background-color: #ad899d;
   transition: all 200ms ease-in-out;
 }
 
